# walrus-demo

./: Cargo.toml  README.md
src/: contract.rs  lib.rs  service.rs
tests/: read_blob.rs
