[package]
name = "walrus-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299" }
serde = "1.0.218"

[dev-dependencies]
anyhow = "1.0.96"
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299", features = ["test", "unstable-oracles", "wasmer"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
test-log = "0.2.17"
tokio = "1.43.0"

[[bin]]
name = "walrus_demo_contract"
path = "src/contract.rs"

[[bin]]
name = "walrus_demo_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
